--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="imgbox">
 	<a href="https://bit.ly/TriboL" title="Clique aqui para acessar nossa loja no MercadoLivre">
-	<img class="center-fit" src="index_arquivos/tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
+	<img class="center-fit" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
 	</a> 
 </div>
 
