inclusao da pesquisa

--- a/index.html
+++ b/index.html
@@ -8,34 +8,25 @@
 
     <title>Tribo L - Games e Entretenimento</title>
 
-<style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }
-    </style>
-
 </head>
-
-
 
 <body style="background-color:black;">
 
-<div class="imgbox">
+
+<div style="overflow:auto;width:350px;height:250px;float:left;left:0;top:0;padding:3px;text-align: center;display: table-cell;vertical-align: middle">
+<p>
 	<a href="https://bit.ly/TriboL" title="Clique aqui para acessar nossa loja no MercadoLivre">
-	<img class="center-fit" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
+		<img width="80%" height="80%" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
+		<br>
+     <font size="2" color="white" face="Tahoma">Clique aqui para acessar nossa loja no MercadoLivre</font>
 	</a> 
+	
+</p>
 </div>
 
+<div style="overflow:auto;width:550px;height:630px;float:left;left:0px;top:0;padding:3px;text-align: center;display: table-cell;vertical-align: middle" src="https://docs.google.com/forms/d/e/1FAIpQLSevW3Pz0IB238YXvQcoP6JVzgESwQig5GWtACYbH6oR3V4-4A/viewform">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSevW3Pz0IB238YXvQcoP6JVzgESwQig5GWtACYbH6oR3V4-4A/viewform?embedded=true" width="550" height="630" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+</div>
 
 
 </body></html>
