Atualização do link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div style="overflow:auto;width:350px;height:250px;float:left;left:0;top:0;padding:3px;text-align: center;display: table-cell;vertical-align: middle">
 <p>
-	<a href="https://bit.ly/TriboL" title="Clique aqui para acessar nossa loja no MercadoLivre">
+	<a href="https://bit.ly/TriboLGames" title="Clique aqui para acessar nossa loja no MercadoLivre">
 		<img width="80%" height="80%" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
 		<br>
      <font size="2" color="white" face="Tahoma">Clique aqui para acessar nossa loja no MercadoLivre</font>
