update font face

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a href="https://bit.ly/TriboLGames" title="Clique aqui para acessar nossa loja no MercadoLivre">
 		<img width="80%" height="80%" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
 		<br>
-     <font size="2" color="white" face="Tahoma">Clique aqui para acessar nossa loja no MercadoLivre</font>
+     <font size="2" color="white" face="Arial">Clique aqui para acessar nossa loja no MercadoLivre</font>
 	</a> 
 	
 </p>
