--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-	<title>TRIBO L - Games, colecionáveis e entretenimento</title>
-	<meta name="description" content="A TRIBO L é uma loja online que vende Games, colecionáveis e entretenimento para o publico geek">
-	<meta name="keywords" content="TRIBO L, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS">
+	<title>TRIBO L - Comércio de games, colecionáveis e entretenimento digital</title>
+	<meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
+	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS">
 	<meta name="robots" content="">
 	<meta name="revisit-after" content="1 day">
 	<meta name="language" content="Portuguese">
