--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
 <body style="background-color:black;">
 
 
-<div style="overflow:auto;width:350px;height:250px;float:left;left:0;top:0;padding:3px;text-align: center;display: table-cell;vertical-align: middle">
+<div style="overflow:auto;width:350px;height:450px;float:left;left:0;top:0;padding:3px;text-align: left;display: table-cell;vertical-align: middle">
 <p>
 	<a href="https://bit.ly/TriboLGames" title="Clique aqui para acessar nossa loja no MercadoLivre">
-		<img width="80%" height="80%" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
+		<img width="90%" height="50%" src="tribol.png" alt="Clique aqui para acessar nossa loja no MercadoLivre">
 		<br>
      <font size="2" color="white" face="Arial">Clique aqui para acessar nossa loja no MercadoLivre</font>
 	</a> 
+	<br>
+	<br>
+	<font size="2" color="white" face="Arial">
+		<a href="help/XBOX.html" title="Como resgatar um código de jogo (25 dítigos) no XBOX">
+			Como resgatar um código de jogo (25 dítigos) no XBOX
+		</a>
+		<br>
+		<br>
+		<font size="2" color="white" face="Arial">
+			<a href="help/STEAM.html" title="Como resgatar um código de jogo na STEAM">
+				Como resgatar um código de jogo na STEAM
+			</a>
+		</font>		
+	</font>
 	
 </p>
 </div>
