--- a/help/STEAM.html
+++ b/help/STEAM.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-	<title>TRIBO L - XBOX :: Como resgatar um código de jogo (25 dítigos) no XBOX</title>
+	<title>TRIBO L - STEAM :: Como resgatar um código de jogo na STEAM</title>
 	<meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
-	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS, CÓDIGO 25 DÍGITOS">
+	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS, STEAM, CÓDIGO DE JOGO, CÓDIGO DE PRODUTO">
 	<meta name="robots" content="">
 	<meta name="revisit-after" content="1 day">
 	<meta name="language" content="Portuguese">
@@ -29,31 +29,43 @@
 
 <div style="overflow:auto;width:600px;height:630px;float:left;left:0px;top:0;padding:3px;text-align: left;display: table-cell;vertical-align: middle">
 
-	<font size="4" color="white" face="Arial">Como resgatar um código de jogo (25 dítigos) no XBOX</font>
+	<font size="4" color="white" face="Arial">Como resgatar um código de jogo na STEAM</font>
 	<br><br>
 	<font size="2" color="white" face="Arial">
-		Você precisa acessar o site <a href="https://redeem.microsoft.com"><b>https://redeem.microsoft.com</b></a> 
+		Você precisa acessar o steam client no seu computador e clicar em JOGOS
 		<br>
 		<br>
-		<img src="xbox/img01.png" alt="">
+		<img src="steam/img01.png" alt="">
 		<br>
 		<br>		
-		Na tela a seguir você informa o seu código de 25 dígitos e clica em AVANÇAR
+		Depois clicar em <i>Ativar um código de produto</i>
 		<br>
 		<br>
-		<img src="xbox/img02.png" alt="">
+		<img src="steam/img02.png" alt="">
 		<br>
 		<br>
-		Será exibida uma imagem do jogo que você comprou e se concorda com os termos clica em CONFIRMAR
+		Na tela de <i>Ativação do produto</i> clique em AVANÇAR
 		<br>
 		<br>
-		<img src="xbox/img03.png" alt="">
+		<img src="steam/img03.png" alt="">
 		<br>
 		<br>	
-		Depois disso você recebe uma mensagem que o jogo está pronto pra você e será instalado automaticamente no seu XBOX
+		Na tela de <i>Acordo de assinatura do STEAM</i> clique em ACEITO
 		<br>
 		<br>
-		<img src="xbox/img04.png" alt="">
+		<img src="steam/img04.png" alt="">
+		<br>
+		<br>	
+		Finalmente na tela a seguir informe o código do jogo e clique em AVANÇAR
+		<br>
+		<br>
+		<img src="steam/img05.png" alt="">
+		<br>
+		<br>	
+		Feito isso o jogo vai começar a baixar e estará disponível em sua BIBLIOTECA
+		<br>
+		<br>
+		<img src="steam/img06.png" alt="">
 		<br>
 		<br>	
 		<a href="https://www.tribol.com.br"><b>Clique aqui para voltar a página inicial</b></a> 
