--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <div class="fancy-hero-content text-center">
                         <h2>Na Tribo L você encontra o jogo que estava procurando, por um preço que pode pagar.</h2>
                         <br>
-                        <a href="https://bit.ly/TriboLGames" target="_blank" class="btn fancy-btn">Loja do MercadoLivre</a>
-                        <a href="https://loja.tribol.com.br" target="_blank" class="btn fancy-btn">Loja Própria</a>                        
+                        <a href="https://bit.ly/TriboLGames" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
+                        <a href="https://loja.tribol.com.br" target="_blank" alt="Acesse nossa loja própria" class="btn fancy-btn">Loja Própria</a>                        
                     </div>
                 </div>
             </div>
