--- a/STEAM.html
+++ b/STEAM.html
@@ -3,8 +3,7 @@
 
 <head>
 
-	<title>TRIBO L - Comércio de games, colecionáveis e entretenimento digital</title>
-	<meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
+    <meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
 	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS">
 	<meta name="robots" content="">
 	<meta name="revisit-after" content="1 day">
@@ -18,7 +17,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>TRIBO L - Comércio de games, colecionáveis e entretenimento digital</title>
+    <title>TRIBO L - Aqui você encontra o jogo que estava procurando, por um preço que pode pagar.</title>
 
 
     <!-- Favicon -->
