--- a/STEAM.html
+++ b/STEAM.html
@@ -64,7 +64,10 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="STEAM.html">Como resgatar um jogo STEAM</a>
-                                </li>                                                                
+                                </li> 
+                                <li class="nav-item">
+                                    <a class="nav-link" href="PESQUISA.html">Pesquisa Gamer</a>
+                                </li>                                                                                                 
                             </ul>
                         </div>
                     </nav>
