--- a/XBOX.html
+++ b/XBOX.html
@@ -54,10 +54,10 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://bit.ly/TriboLGames" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://bit.ly/TriboLGames" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://loja.tribol.com.br">Loja Própria</a>
+                                    <a class="nav-link" href="https://loja.tribol.com.br" target="_blank">Loja Própria</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="XBOX.html">Como resgatar um jogo XBOX</a>
