--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                                     <a class="nav-link" href="https://loja.tribol.com.br" target="_blank">Loja Própria</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="XBOX.html">Como resgatar um jogo XBOX</a>
+                                    <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="STEAM.html">Como resgatar um jogo STEAM</a>
+                                    <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li>    
                                 <li class="nav-item">
-                                    <a class="nav-link" href="PESQUISA.html">Pesquisa Gamer</a>
+                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
                                 </li>                                                                                              
                             </ul>
                         </div>
