--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
+	<meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados. Aqui você encontra jogos com preços que pode pagar.">
 	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS">
 	<meta name="robots" content="">
 	<meta name="revisit-after" content="1 day">
@@ -17,7 +17,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>TRIBO L - Aqui você encontra o jogo que estava procurando, por um preço que pode pagar.</title>
+    <title>TRIBO L - Aqui você encontra jogos com preços que pode pagar.</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -82,7 +82,8 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="fancy-hero-content text-center">
-                        <h2>Na Tribo L você encontra o jogo que estava procurando, por um preço que pode pagar.</h2>
+                        <h2>Na Tribo L você encontra jogos <br>com preços que pode pagar.</h2>
+                        <br>
                         <br>
                         <a href="https://bit.ly/TriboLGames" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
                         <a href="https://loja.tribol.com.br" target="_blank" alt="Acesse nossa loja própria" class="btn fancy-btn">Loja Própria</a>                        
