--- a/pesquisa.html
+++ b/pesquisa.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados.">
+    <meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados. Aqui você encontra jogos com preços que pode pagar">
 	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS">
 	<meta name="robots" content="">
 	<meta name="revisit-after" content="1 day">
@@ -18,7 +18,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>TRIBO L - Aqui você encontra o jogo que estava procurando, por um preço que pode pagar.</title>
+    <title>TRIBO L - Aqui você encontra jogos com preços que pode pagar.</title>
 
 
     <!-- Favicon -->
