--- a/steam.html
+++ b/steam.html
@@ -66,7 +66,7 @@
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li> 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
+                                    <a class="nav-link" href="pesquisa.html">Cupom de desconto ?</a>
                                 </li>                                                                                                 
                             </ul>
                         </div>
