--- a/index.html
+++ b/index.html
@@ -94,6 +94,63 @@
     </div>
     <!-- ***** Hero Area End ***** -->
 
+    <!-- ***** Top Feature Area Start ***** -->
+    <div class="fancy-top-features-area bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="fancy-top-features-content">
+                        <div class="row no-gutters">
+                            <div class="col-12 col-md-4">
+                                <div class="single-top-feature">
+                                    <h5><i class="fa fa-thumbs-o-up" aria-hidden="true"></i> Confiabilidade</h5>
+                                    <p>O nosso maior valor é a confiança, acreditamos que uma excelente e duradora relação com nossos clientes acontece quando se tem honestidade, sinceridade e transparência.</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="single-top-feature">
+                                    <h5><i class="fa fa-clock-o" aria-hidden="true"></i> Experiência</h5>
+                                    <p>Somos uma família gamer, adoramos videogames, jogos de tabuleiro, coisas geek. Estamos constantemente experimentando e vivenciando as novidades desse mundo.  </p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="single-top-feature">
+                                    <h5><i class="fa fa-diamond" aria-hidden="true"></i> Qualidade</h5>
+                                    <p>Buscamos sempre os melhores produtos e só vendemos itens originais de qualidade, produtos novos ou usados mas sempre em perfeito estado e funcionamento. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ***** Top Feature Area End ***** -->
+
+    <!-- ***** About Us Area Start ***** -->
+    <section class="fancy-about-us-area bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-text">
+                        <h2>O que nos move é o reflexo do trabalho na satisfação dos nossos clientes</h2>
+                        <p>Não temos vergonha de dizer que somos uma empresa começando, mas temos muito orgulho do pouco que já fizemos, e muita vontade e esperança de fazer cada vez mais pelos nossos clientes e pela comunidade gamer.</p>
+                        <p>Veja você mesmo as recomendações que temos no MercadoLivre.</p>
+                        <a href="https://www.mercadolivre.com.br/perfil/WWW.TRIBOL.COM.BR" class="btn fancy-btn fancy-dark" target="_blank">Reputação www.tribol.com.br</a>
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-6 col-xl-5 ml-xl-auto">
+                    <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                        <img src="img/bg-img/about-1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ***** About Us Area End ***** -->
+
+
     <!-- ***** Footer Area Start ***** -->
     <footer class="fancy-footer-area fancy-bg-dark">
 
