--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12 col-lg-6 col-xl-5 ml-xl-auto">
+                    <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                        <img src="img/bg-img/10porcento.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-text">
+                        <h2>Que tal um cupom de 10% de desconto ?</h2>
+                        <p>Quer ganhar um cupom de 10% de desconto para usar na sua próxima compra na nossa loja própria ?</p>
+                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender o que vocês querem e nós te ajudamos na sua próxima aquisição gamer na nossa loja.</p>
+                        <a href="pesquisa.html" class="btn fancy-btn fancy-dark">Pesquisa Gamer</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </section>
     <!-- ***** About Us Area End ***** -->
 
