--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="about-us-text">
                         <h2>Que tal um cupom de 10% de desconto ?</h2>
                         <p>Quer ganhar um cupom de 10% de desconto para usar na sua próxima compra na nossa loja própria ?</p>
-                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender o que vocês querem e nós te ajudamos na sua próxima aquisição gamer na nossa loja.</p>
+                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender melhor o que vocês esperam de uma loja gamer e nós te ajudamos a adquirir seu próximo jogo na nossa loja.</p>
                         <a href="pesquisa.html" class="btn fancy-btn fancy-dark">Pesquisa Gamer</a>
                     </div>
                 </div>
