--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2>O que nos move é o reflexo do trabalho na satisfação dos nossos clientes</h2>
                         <p>Não temos vergonha de dizer que somos uma empresa começando, mas temos muito orgulho do pouco que já fizemos, e muita vontade e esperança de fazer cada vez mais pelos nossos clientes e pela comunidade gamer.</p>
                         <p>Veja você mesmo as recomendações que temos no MercadoLivre.</p>
-                        <a href="https://www.mercadolivre.com.br/perfil/WWW.TRIBOL.COM.BR" class="btn fancy-btn fancy-dark" target="_blank">Reputação www.tribol.com.br</a>
+                        <a href="https://www.mercadolivre.com.br/perfil/WWW.TRIBOL.COM.BR" class="btn fancy-btn fancy-dark" target="_blank">Reputação</a>
                     </div>
                 </div>
 
