--- a/steam.html
+++ b/steam.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156902044-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156902044-1');
+    </script>
 
     <meta name="description" content="A TRIBO L é uma loja online que vende Games para os principais consoles da atualidade, colecionáveis e entretenimento para o público geek, temos sempre excelentes promoções jogos novos e usados. Aqui você encontra jogos com preços que pode pagar">
 	<meta name="keywords" content="TRIBO L, TRIBOL, XBOX, PS4, PS3, XBOX ONE, XBOX 360, NINTENDO, Wii, WiiU, NINTENDO SWITCH, SWITCH, GAMES, JOGOS, JOGOS DIGITAIS, JOGOS EM MÍDIA FÍSICA, COLECIONÁVEIS, JOGOS USADOS, JOGOS NOVOS, JOGOS LACRADOS">
