--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156902044-1"></script>
     <script>
@@ -172,7 +172,7 @@
                     <div class="about-us-text">
                         <h2>Que tal um cupom de 10% de desconto ?</h2>
                         <p>Quer ganhar um cupom de 10% de desconto para usar na sua próxima compra na nossa loja própria ?</p>
-                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender melhor o que vocês esperam de uma loja gamer e nós te ajudamos a adquirir seu próximo jogo na nossa loja.</p>
+                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender melhor o que você espera de uma loja gamer e nós te ajudamos a adquirir seu próximo jogo na nossa loja.</p>
                         <a href="pesquisa.html" class="btn fancy-btn fancy-dark">Pesquisa Gamer</a>
                     </div>
                 </div>
