--- a/help/lojaintegrada/xbox.html
+++ b/help/lojaintegrada/xbox.html
@@ -1,3 +1,4 @@
+<div height="600">
 <p>
 	<br />
 	<span style="font-family:verdana,arial;font-size:12px;color:#000000;">
@@ -53,3 +54,4 @@
 - Antes de comprar tenha plena certeza de que é o produto que deseja, consulte gameplays no youtube, consulte amigos, opinião especializada, etc.;<br />
 - Realizando a compra você concorda com todos esses termos contidos aqui;</span></span></span><br />
  </p>
+ </div>
