todas as descricoes de anuncios

--- a/help/lojaintegrada/steam.html
+++ b/help/lojaintegrada/steam.html
@@ -2,17 +2,10 @@
 <span style="font-family:verdana,arial;font-size:12px">
 <br />
 <span style="color:#000000;">
-	<strong>Código de 25 dígitos original para resgate do jogo de forma exclusiva em sua gamertag.</strong>
-</span>
-<br />
-<span style="color:#000000;">
-	Exemplo de código:
-	<strong>XXXXX-XXXXX-XXXXX-XXXXX-XXXXX</strong>
+	<strong>Código original para resgate do jogo de forma exclusiva em sua conta STEAM.</strong>
 </span>
 <br />
 <br />
-<br />
-
 <span style="color:#008000;">
 	<strong><u>INFORMAÇÕES SOBRE O ANÚNCIO</u></strong>
 </span>
@@ -23,10 +16,33 @@
 - Como não tem envio de disco físico, na finalização da compra informe o CEP e escolha entrega por "Email" para não pagar frete;<br />
 - Após resgatar o jogo ele é seu pra sempre, não poderá ser transferido para outra pessoa;<br />
 - Você precisa ter uma conta original e internet para fazer o download do jogo;<br />
-- Para resgatar o código o serviço da Xbox Live precisa estar online, consulte antes em <a href="https://beta.support.xbox.com/xbox-live-status" target="_blank"><strong>https://beta.support.xbox.com/xbox-live-status</strong></a> ;<br />
+- Para resgatar o código o serviço da STEAM precisa estar online, consulte antes em <a href="https://steamstat.us" target="_blank"><strong>https://steamstat.us</strong></a> ;<br />
 - Você realiza o pagamento de forma segura com MercadoPago, usando boleto ou cartão, dependendo do valor do produto o MercadoPago permite parcelamento sem juros;<br />
 - Se não sabe realizar o resgate ou tem dúvidas, fique tranquilo(a) que irei dar todo o apoio necessário, entre em contato via fale conosco ou via whatsapp;<br />
 - IMPORTANTE: Se optar por pagamento via boleto, será necessário até 2 dias úteis para que a confirmação de pagamento ocorra;</span><br />
+<br />
+<br />
+<span style="color:#008000;">
+	<strong><u>REQUERIMENTOS DO COMPUTADOR</u></strong>
+</span>
+<br />
+<br />
+<span style="color:#000000;">
+<strong>Mínimo:</strong><br />
+  OS: Windows 7/8.1/10 (64-bit versions)<br />
+  Processor: Intel Core i5-2400/AMD FX-8320 or better<br />
+  Memory: 8 GB RAM<br />
+  Graphics: NVIDIA GTX 670 2GB/AMD Radeon HD 7870 2GB or better<br />
+  Storage: 55 GB available space<br />
+  Additional Notes: Requires Steam activation and broadband internet connection for Multiplayer and SnapMap<br />
+<br />
+<strong>Recomendado:</strong><br />
+  OS: Windows 7/8.1/10 (64-bit versions)<br />
+  Processor: Intel Core i7-3770/AMD FX-8350 or better<br />
+  Memory: 8 GB RAM<br />
+  Graphics: NVIDIA GTX 970 4GB/AMD Radeon R9 290 4GB or better<br />
+  Storage: 55 GB available space<br />
+  Additional Notes: Requires Steam activation and broadband internet connection for Multiplayer and SnapMap<br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -41,25 +57,15 @@
 <br />
 <br />
 <span style="color:#008000;">
-	<strong><u>COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS</strong></u>
+	<strong><u>COMO RESGATAR UM CÓDIGO DE JOGO NA STEAM</strong></u>
 </span>
 <br />
 <br />
-- Você precisa acessar o site: <a href="https://redeem.microsoft.com" target="_blank"><strong>https://redeem.microsoft.com</strong></a> usando a mesma conta do videogame;<br />
-- Digite o código de 25 dígitos ( Exemplo: xxxxx-xxxxx-xxxxx-xxxxx-xxxxx ) no campo solicitado e clique em <strong>AVANÇAR</strong>;<br />
-- Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;<br />
-- Para maiores informações acesse: <a href="https://www.tribol.com.br/xbox.html" target="_blank"><strong>https://www.tribol.com.br/xbox.html</strong></a><br />
-<br />
-<br />
-<span style="color:#008000;">
-	<strong><u>COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS NO XBOX ONE</u></strong>
-</span>
-<br />
-<br />
-- Acesse o videogame com a conta que deseja resgatar o jogo;<br />
-- Vá até <strong>STORE</strong> e clique no botão <strong>USAR UM CÓDIGO</strong>;<br />
-- Digite o código de 25 dígitos ( xxxxx-xxxxx-xxxxx-xxxxx-xxxxx ) no campo solicitado e clique em <strong>AVANÇAR</strong>;<br />
-- Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;<br />
+- Você precisa acessar o aplicativo steam client no computador para ativar o produto;<br />
+- Clique no menu <strong>Jogos</strong> e escolha <strong>Ativar um código de produto</strong>;<br />
+- Cole a chave em Código de produto e siga as passos indicados;<br />
+- Pronto, seu jogo estará disponível no menu <strong>Biblioteca</strong>;<br />
+- Para maiores informações acesse: <a href="https://www.tribol.com.br/steam.html" target="_blank"><strong>https://www.tribol.com.br/steam.html</strong></a><br />
 <br />
 <br />
 <span style="color:#008000;">
