--- a/help/lojaintegrada/xboxplayanywhere.html
+++ b/help/lojaintegrada/xboxplayanywhere.html
@@ -2,7 +2,10 @@
 <span style="font-family:verdana,arial;font-size:12px">
 <br />
 <span style="color:#000000;">
-	<strong>Código de 25 dígitos original para resgate do jogo de forma exclusiva em sua gamertag.</strong>
+	<strong>
+		Título Play Anywhere, serve para XBOX ONE e PC.<br />
+		Código de 25 dígitos original para resgate do jogo de forma exclusiva em sua gamertag.
+	</strong>
 </span>
 <br />
 <span style="color:#000000;">
