--- a/help/lojaintegrada/xboxretrocompativel.html
+++ b/help/lojaintegrada/xboxretrocompativel.html
@@ -2,7 +2,10 @@
 <span style="font-family:verdana,arial;font-size:12px">
 <br />
 <span style="color:#000000;">
-	<strong>Código de 25 dígitos original para resgate do jogo de forma exclusiva em sua gamertag.</strong>
+	<strong>
+		Título Retrocompatível, serve para XBOX 360 e XBOX ONE.<br />
+		Código de 25 dígitos original para resgate do jogo de forma exclusiva em sua gamertag.
+	</strong>
 </span>
 <br />
 <span style="color:#000000;">
@@ -38,6 +41,17 @@
 - O envio ocorre por email que foi usado no cadastro do nosso site, então ao realizar o cadastro informe os dados corretamente;<br />
 - O email vai do remetente TRIBO L com o assunto "Nova observação sobre o pedido (nº do seu pedido)";<br />
 - O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;<br />
+<br />
+<br />
+<span style="color:#008000;">
+	<strong><u>COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS NO XBOX 360</strong></u>
+</span>
+<br />
+<br />
+- Entre no seu Xbox 360 (verifique se você está conectado à conta Microsoft com a qual deseja resgatar o código);<br />
+- Pressione o botão Painel Xbox no seu controle;<br />
+- Selecione Jogos e Apps e escolha Resgatar Código;<br />
+- Insira o código de 25 caracteres e, em seguida, siga os prompts. Não se preocupe com os hifens, o sistema cuidará deles para você.<br />
 <br />
 <br />
 <span style="color:#008000;">
