--- a/help/lojaintegrada/xboxplayanywhere.html
+++ b/help/lojaintegrada/xboxplayanywhere.html
@@ -23,13 +23,14 @@
 <br />
 <span style="color:#000000;">
 - Este produto é um jogo 100% digital e original, ou seja, não tem um disco físico para enviar;<br />
-- Como não tem envio de disco físico, na finalização da compra informe o CEP e escolha entrega por "Email" para não pagar frete;<br />
-- Após resgatar o jogo ele é seu pra sempre, não poderá ser transferido para outra pessoa;<br />
+- Todos os códigos que comercializamos são únicos e exclusivos, nunca resgatados;<br />
+- Como não tem envio de disco físico, na finalização da compra informe o CEP e escolha entrega por "Email";<br />
+- Após resgatar o jogo ele é seu pra sempre de forma instransferível, você pode desinstalar e reinstalar o jogo quantas vezes desejar;<br />
 - Você precisa ter uma conta original e internet para fazer o download do jogo;<br />
 - Para resgatar o código o serviço da Xbox Live precisa estar online, consulte antes em <a href="https://beta.support.xbox.com/xbox-live-status" target="_blank"><strong>https://beta.support.xbox.com/xbox-live-status</strong></a> ;<br />
 - Você realiza o pagamento de forma segura com MercadoPago, usando boleto ou cartão, dependendo do valor do produto o MercadoPago permite parcelamento sem juros;<br />
-- Se não sabe realizar o resgate ou tem dúvidas, fique tranquilo(a) que irei dar todo o apoio necessário, entre em contato via fale conosco ou via whatsapp;<br />
-- IMPORTANTE: Se optar por pagamento via boleto, será necessário até 2 dias úteis para que a confirmação de pagamento ocorra;</span><br />
+- Se não sabe realizar o resgate ou tem dúvidas, fique tranquilo(a) você terá todo o apoio necessário, entre em contato via fale conosco ou via whatsapp;<br />
+- IMPORTANTE: Se optar por pagamento via boleto, será necessário até 1 dia útil para que tenhamos a confirmação de pagamento;</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -70,10 +71,8 @@
 </span>
 <br />
 <br />
-- Todos os códigos que comercializamos são únicos e exclusivos, nunca resgatados, isso podemos garantir pra você;<br />
 - Uma vez tendo conhecimento do código você ou qualquer pessoa que tenha acesso a ele pode realizar o resgate do produto;<br />
-- Uma vez resgatado o código, você pode desinstalar e reinstalar o jogo quantas vezes desejar, será seu para sempre e de maneira instransferível;<br />
-- Pelos motivos acima, nós não podemos realizar devolução nem reembolso de um produto digital;<br />
+- Por este motivo nós não podemos realizar a devolução e nem reembolso de um produto digital;<br />
 - Antes de comprar tenha plena certeza de que é o produto que deseja, consulte gameplays no youtube, consulte amigos, opinião especializada, etc.;<br />
 - Realizando a compra você concorda com todos os termos aqui descritos;<br />
 <br />
