--- a/help/lojaintegrada/xboxplayanywhere.html
+++ b/help/lojaintegrada/xboxplayanywhere.html
@@ -67,7 +67,7 @@
 <br />
 <br />
 <span style="color:#008000;">
-	<strong><u>INFORMAÇÕES ADICIONAIS E POLÍTICA DE DEVOLUÇÃO E REEMBOLSO</u></strong>
+	<strong><u>POLÍTICA DE DEVOLUÇÃO E REEMBOLSO</u></strong>
 </span>
 <br />
 <br />
