--- a/help/lojaintegrada/steam.html
+++ b/help/lojaintegrada/steam.html
@@ -1,5 +1,5 @@
 <div height="920">
-<span style="font-family:verdana,arial;font-size:12px">
+<span style="font-family:verdana,arial;font-size:12px;color:#000000;">
 <br />
 <span style="color:#000000;">
 	<strong>Código original para resgate do jogo de forma exclusiva em sua conta STEAM.</strong>
@@ -51,10 +51,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Envio imediato do código do jogo em até 2 horas após a confirmação de pagamento;<br />
 - O envio ocorre por email que foi usado no cadastro do nosso site, então ao realizar o cadastro informe os dados corretamente;<br />
 - O email vai do remetente TRIBO L com o assunto "Nova observação sobre o pedido (nº do seu pedido)";<br />
-- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;<br />
+- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -62,11 +63,12 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Você precisa acessar o aplicativo steam client no computador para ativar o produto;<br />
 - Clique no menu <strong>Jogos</strong> e escolha <strong>Ativar um código de produto</strong>;<br />
 - Cole a chave em Código de produto e siga as passos indicados;<br />
 - Pronto, seu jogo estará disponível no menu <strong>Biblioteca</strong>;<br />
-- Para maiores informações acesse: <a href="https://www.tribol.com.br/steam.html" target="_blank"><strong>https://www.tribol.com.br/steam.html</strong></a><br />
+- Para maiores informações acesse: <a href="https://www.tribol.com.br/steam.html" target="_blank"><strong>https://www.tribol.com.br/steam.html</strong></a></span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -74,11 +76,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Uma vez tendo conhecimento do código você ou qualquer pessoa que tenha acesso a ele pode realizar o resgate do produto;<br />
 - Por este motivo nós não podemos realizar a devolução e nem reembolso de um produto digital;<br />
 - Antes de comprar tenha plena certeza de que é o produto que deseja, consulte gameplays no youtube, consulte amigos, opinião especializada, etc.;<br />
-- Realizando a compra você concorda com todos os termos aqui descritos;<br />
+- Realizando a compra você concorda com todos os termos aqui descritos;</span><br />
 <br />
 <br />
- </font> 
  </div>
