--- a/help/lojaintegrada/xbox360.html
+++ b/help/lojaintegrada/xbox360.html
@@ -1,5 +1,5 @@
 <div height="920">
-<span style="font-family:verdana,arial;font-size:12px">
+<span style="font-family:verdana,arial;font-size:12px;color:#000000;">
 <br />
 <span style="color:#000000;">
 	<strong>
@@ -37,10 +37,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Envio imediato do código do jogo em até 2 horas após a confirmação de pagamento;<br />
 - O envio ocorre por email que foi usado no cadastro do nosso site, então ao realizar o cadastro informe os dados corretamente;<br />
 - O email vai do remetente TRIBO L com o assunto "Nova observação sobre o pedido (nº do seu pedido)";<br />
-- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;<br />
+- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -48,10 +49,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Entre no seu Xbox 360 (verifique se você está conectado à conta Microsoft com a qual deseja resgatar o código);<br />
 - Pressione o botão Painel Xbox no seu controle;<br />
 - Selecione Jogos e Apps e escolha Resgatar Código;<br />
-- Insira o código de 25 caracteres e, em seguida, siga os prompts. Não se preocupe com os hifens, o sistema cuidará deles para você.<br />
+- Insira o código de 25 caracteres e, em seguida, siga os prompts. Não se preocupe com os hifens, o sistema cuidará deles para você.</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -59,11 +61,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Uma vez tendo conhecimento do código você ou qualquer pessoa que tenha acesso a ele pode realizar o resgate do produto;<br />
 - Por este motivo nós não podemos realizar a devolução e nem reembolso de um produto digital;<br />
 - Antes de comprar tenha plena certeza de que é o produto que deseja, consulte gameplays no youtube, consulte amigos, opinião especializada, etc.;<br />
-- Realizando a compra você concorda com todos os termos aqui descritos;<br />
+- Realizando a compra você concorda com todos os termos aqui descritos;</span><br />
 <br />
 <br />
- </font> 
- </div>
+</div>
