--- a/help/lojaintegrada/xboxplayanywhere.html
+++ b/help/lojaintegrada/xboxplayanywhere.html
@@ -1,5 +1,5 @@
 <div height="920">
-<span style="font-family:verdana,arial;font-size:12px">
+<span style="font-family:verdana,arial;font-size:12px;color:#000000;">
 <br />
 <span style="color:#000000;">
 	<strong>
@@ -38,10 +38,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Envio imediato do código do jogo em até 2 horas após a confirmação de pagamento;<br />
 - O envio ocorre por email que foi usado no cadastro do nosso site, então ao realizar o cadastro informe os dados corretamente;<br />
 - O email vai do remetente TRIBO L com o assunto "Nova observação sobre o pedido (nº do seu pedido)";<br />
-- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;<br />
+- O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -49,10 +50,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Você precisa acessar o site: <a href="https://redeem.microsoft.com" target="_blank"><strong>https://redeem.microsoft.com</strong></a> usando a mesma conta do videogame;<br />
 - Digite o código de 25 dígitos ( Exemplo: xxxxx-xxxxx-xxxxx-xxxxx-xxxxx ) no campo solicitado e clique em <strong>AVANÇAR</strong>;<br />
 - Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;<br />
-- Para maiores informações acesse: <a href="https://www.tribol.com.br/xbox.html" target="_blank"><strong>https://www.tribol.com.br/xbox.html</strong></a><br />
+- Para maiores informações acesse: <a href="https://www.tribol.com.br/xbox.html" target="_blank"><strong>https://www.tribol.com.br/xbox.html</strong></a></span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -60,10 +62,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Acesse o videogame com a conta que deseja resgatar o jogo;<br />
 - Vá até <strong>STORE</strong> e clique no botão <strong>USAR UM CÓDIGO</strong>;<br />
 - Digite o código de 25 dígitos ( xxxxx-xxxxx-xxxxx-xxxxx-xxxxx ) no campo solicitado e clique em <strong>AVANÇAR</strong>;<br />
-- Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;<br />
+- Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;</span><br />
 <br />
 <br />
 <span style="color:#008000;">
@@ -71,11 +74,11 @@
 </span>
 <br />
 <br />
+<span style="color:#000000;">
 - Uma vez tendo conhecimento do código você ou qualquer pessoa que tenha acesso a ele pode realizar o resgate do produto;<br />
 - Por este motivo nós não podemos realizar a devolução e nem reembolso de um produto digital;<br />
 - Antes de comprar tenha plena certeza de que é o produto que deseja, consulte gameplays no youtube, consulte amigos, opinião especializada, etc.;<br />
-- Realizando a compra você concorda com todos os termos aqui descritos;<br />
+- Realizando a compra você concorda com todos os termos aqui descritos;</span><br />
 <br />
 <br />
- </font> 
- </div>
+</div>
